--- a/AspNetCoreCS/appsettings.json
+++ b/AspNetCoreCS/appsettings.json
@@ -7,11 +7,13 @@
     "ConnectionStrings": {
         //"ReadEdgeCoreContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ReadEdgeCore; User ID=readedge;Password=abc@123; Trusted_Connection=False;"
         //"UserContext": "Server=202.143.96.153,3306;Database=Prachi;User ID=Prachi_Portal;Password=Prachi_Portal@123;Trusted_Connection=False;",
-        "UserContext": "Server=220.158.164.159;Database=prachi;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;",
         //"ReadEdgeCoreContext": "Server=202.143.96.153,3306;Database=ReadEdgeCore;User ID=Prachi_Portal;Password=Prachi_Portal@123;Trusted_Connection=False;"
         //"UserContext": "Data Source=DESKTOP-B00UGO6\\SQLEXPRESS;Initial Catalog=Prachi;Trusted_Connection=True;MultipleActiveResultSets=true;",
         //"ReadEdgeCoreContext": "Data Source=DESKTOP-B00UGO6\\SQLEXPRESS;Initial Catalog=ReadEdgeCore;Trusted_Connection=True;MultipleActiveResultSets=true;"
-        "ReadEdgeCoreContext": "Server=220.158.164.159;Database=ReadEdgeCore31122019;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;"
+        //"ReadEdgeCoreContext": "Server=220.158.164.159;Database=ReadEdgeCore31122019;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;",
+        //"UserContext": "Server=220.158.164.159;Database=prachi;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;",
+        "ReadEdgeCoreContext": "Server=202.140.136.39;Database=ReadEdge;User ID=Prachi_DBO;Password=Prachi@123$#;Trusted_Connection=False;",
+        "UserContext": "Server=202.140.136.39;Database=prachi;User ID=Prachi_DBO;Password=Prachi@123$#;Trusted_Connection=False;"
     },
     "AppSettings": {
         "BookLocation": "D:\\ReadEdge\\AspNetCoreCS\\AspNetCoreCS\\wwwroot\\Books",
