--- a/AspNetCoreCS/ReadEdgeCoreV1.csproj
+++ b/AspNetCoreCS/ReadEdgeCoreV1.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
 
   <ItemGroup>
