--- a/AspNetCoreCS/web.config
+++ b/AspNetCoreCS/web.config
@@ -7,11 +7,13 @@
     <add name="ReadEdgeCoreContext" connectionString="Data Source=(localdb)\\MSSQLLocalDB;User ID=readedge;Password=abc@123;Initial Catalog=ReadEdgeCore;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
   </connectionStrings>-->
   <connectionStrings>
-    <!--<add name="ReadEdgeCoreContext" connectionString="Data Source=DESKTOP-B00UGO6\SQLEXPRESS;Initial Catalog=ReadEdgeCore;Trusted_Connection=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
-    <add name="UserContext" connectionString="Data Source=DESKTOP-B00UGO6\SQLEXPRESS;Initial Catalog=Prachi;Trusted_Connection=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>-->
-    <add name="ReadEdgeCoreContext" connectionString="Data Source=220.158.164.159;Initial Catalog=ReadEdgeCore31122019;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
-    <add name="UserContext" connectionString="Data Source=220.158.164.159;Initial Catalog=prachi;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+    <add name="ReadEdgeCoreContext" connectionString="Data Source=DESKTOP-B00UGO6\SQLEXPRESS;Initial Catalog=ReadEdgeCore;Trusted_Connection=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
+    <add name="UserContext" connectionString="Data Source=DESKTOP-B00UGO6\SQLEXPRESS;Initial Catalog=Prachi;Trusted_Connection=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
+    <!--<add name="ReadEdgeCoreContext" connectionString="Data Source=220.158.164.159;Initial Catalog=ReadEdgeCore31122019;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+    <add name="UserContext" connectionString="Data Source=220.158.164.159;Initial Catalog=prachi;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>-->
   <!--<add name="ReadEdgeCoreContext" connectionString="Server=202.143.96.153,3306;Database=ReadEdgeCore;User ID=Prachi_Portal;Password=Prachi_Portal@123;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
+     <add name="ReadEdgeCoreContext" connectionString="Data Source=202.140.136.39;Initial Catalog=ReadEdge;User ID=Prachi_DBO;Password=Prachi@123$#;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+    <add name="UserContext" connectionString="Data Source=202.140.136.39;Initial Catalog=prachi;User ID=Prachi_DBO;Password=Prachi@123$#;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
  
   </connectionStrings>
   <system.webServer>
