--- a/AspNetCoreCS/appsettings.json
+++ b/AspNetCoreCS/appsettings.json
@@ -18,7 +18,13 @@
     "AppSettings": {
         "BookLocation": "D:\\ReadEdge\\AspNetCoreCS\\AspNetCoreCS\\wwwroot\\Books",
         "CourseBookLocation": "D:\\ReadEdge\\AspNetCoreCS\\AspNetCoreCS\\wwwroot\\PdfEbooks",
-        "BookImageLocation": "E:\\Website\\Rahul\\PrachiPublished\\ModuleFiles\\Items"
+        "BookImageLocation": "E:\\Website\\Rahul\\PrachiPublished\\ModuleFiles\\Items",
+        "Salt": "eCwWELxi",
+        "Key": "gtKFFx",
+        "IsLive": "false",
+        "SubOrderIdPrefix": "PIPL-RDG-",
+        "paymentgatewayUrl": "https://test.payu.in/_payment",
+        "subreturnUrl": "http://localhost:65303//UserSubscription/PaymentStatus"
     },
     "AllowedHosts": "*"
 }
