--- a/AspNetCoreCS/web.config
+++ b/AspNetCoreCS/web.config
@@ -12,9 +12,13 @@
     <!--<add name="ReadEdgeCoreContext" connectionString="Data Source=220.158.164.159;Initial Catalog=ReadEdgeCore31122019;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
     <add name="UserContext" connectionString="Data Source=220.158.164.159;Initial Catalog=prachi;User ID=Prachi_Portal;Password=Prachi_Portal@2;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>-->
   <!--<add name="ReadEdgeCoreContext" connectionString="Server=202.143.96.153,3306;Database=ReadEdgeCore;User ID=Prachi_Portal;Password=Prachi_Portal@123;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
-     <add name="ReadEdgeCoreContext" connectionString="Data Source=202.140.136.39;Initial Catalog=ReadEdge;User ID=Prachi_DBO;Password=Prachi@123$#;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
-    <add name="UserContext" connectionString="Data Source=202.140.136.39;Initial Catalog=prachi;User ID=Prachi_DBO;Password=Prachi@123$#;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
- 
+     <!--<add name="ReadEdgeCoreContext" connectionString="Data Source=20.204.48.126,3306;Initial Catalog=ReadEdge;User ID=Prachi_DBO;Password=Prachi@2020$!;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+    <add name="UserContext" connectionString="Data Source=20.204.48.126,3306;Initial Catalog=prachi;User ID=Prachi_DBO;Password=Prachi@2020$!;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>-->
+
+    <add name="ReadEdgeCoreContext" connectionString="Data Source=20.204.48.126,3306;Initial Catalog=Readedge21;User ID=rahul;Password=pass@123;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+    <add name="UserContext" connectionString="Data Source=20.204.48.126,3306;Initial Catalog=prachi21;User ID=rahul;Password=pass@123;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+
+
   </connectionStrings>
   <system.webServer>
     <security>
